--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,3 +1,4 @@
+dj-email-url==0.0.10
 Django==1.11.7
 django-cors-headers==2.1.0
 olefile==0.44
@@ -5,3 +6,4 @@ Pillow==4.3.0
 pytz==2017.3
 qrcode==5.3
 six==1.11.0
+tqdm==4.19.4
