add homepage to package.json

--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "scanner",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://scanner.franceinsoumise.org/scan/",
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
