--- a/back/Pipfile
+++ b/back/Pipfile
@@ -8,7 +8,7 @@ name = "pypi"
 [packages]
 
 dj-email-url = "==0.0.*"
-Django = "==2.0.*"
+django = "==2.0.*"
 django-cors-headers = "==2.*"
 olefile = "==0.44"
 pillow = "==4.3.*"
@@ -16,6 +16,8 @@ pytz = "*"
 qrcode = "==5.*"
 tqdm = "*"
 prometheus-client = "*"
+"html2text" = "*"
+requests = "*"
 
 
 [dev-packages]
