--- a/back/Pipfile
+++ b/back/Pipfile
@@ -1,12 +1,9 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 dj-email-url = "==0.0.*"
 django = "==2.0.*"
 django-cors-headers = "==2.*"
@@ -20,6 +17,8 @@ prometheus-client = "*"
 requests = "*"
 systemd = "*"
 
-
 [dev-packages]
+black = "==18.9b0"
 
+[requires]
+python_version = "3.6"
