--- a/back/Pipfile
+++ b/back/Pipfile
@@ -16,6 +16,7 @@ prometheus-client = "*"
 "html2text" = "*"
 requests = "*"
 systemd = "*"
+djangorestframework = "*"
 
 [dev-packages]
 black = "==18.9b0"
