--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "swr": "^0.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
