--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://scanner.franceinsoumise.org/scan/",
   "dependencies": {
+    "bootstrap-icons": "^1.0.0-alpha5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
