--- a/front/package.json
+++ b/front/package.json
@@ -5,10 +5,10 @@
   "homepage": "https://scanner.franceinsoumise.org/scan/",
   "dependencies": {
     "bootstrap-icons": "^1.0.0-alpha5",
+    "html5-qrcode": "^2.0.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1",
-    "swr": "^0.2.3"
+    "swr": "^0.5.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,6 +23,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-scripts": "^4.0.3"
   }
 }
