update scanner to django 4 and python 3.12

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = ""
 authors = ["Salomé Cheysson <salome@cheysson.fr>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-dj-email-url = "==1.*"
-django = "==3.*"
-django-cors-headers = "==3.*"
-pillow = "==8.*"
+python = "^3.12"
+dj-email-url = "^1.0.6"
+django = "^4.2"
+django-cors-headers = "^4.7.0"
+pillow = "^10.4.0"
 pytz = "*"
-qrcode = "==7.*"
+qrcode = "^8.2"
 tqdm = "*"
 prometheus-client = "*"
 "html2text" = "*"
