--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ requests = "*"
 cysystemd = "*"
 djangorestframework = "*"
 django-filter = "*"
+google-auth = "^2.40.3"
+google-api-python-client = "^2.177.0"
+pyjwt = "^2.10.1"
+cryptography = "^45.0.5"
 
 
 [tool.poetry.dev-dependencies]
