--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ google-api-python-client = "^2.177.0"
 pyjwt = "^2.10.1"
 cryptography = "^45.0.5"
 pyopenssl = "^25.1.0"
+icalendar = "^6.3.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
